--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                 <div class="grid__item pe-0 medium-up--one-sixth text-right site-header__icons">
                     <div class="site-header__icons-wrapper">
                         <a class="primary_btn d-none d-lg-inline-block"
-                           href="https://dexscreener.com/solana/">Dexscreener
+                           href="https://dexscreener.com/solana/9pkpJUCzPJKZEXUWDeX9p6QUCDGhSpmAqJo41x3wtydK">Dexscreener
                              </a>
                     </div>
                 </div>
@@ -927,7 +927,7 @@
                     <div class="container">
                         <div class="section_header text-center mb-5">
 
-                            <h4 class="fw-bold">CA : </h4>
+                            <h4 class="fw-bold">CA : 9pkpJUCzPJKZEXUWDeX9p6QUCDGhSpmAqJo41x3wtydK</h4>
                             <h4 class="fw-bold">100% Community driven </h4>
                             <h4 class="fw-bold">100% Liquidity burned </h4>
                         </div>
